k8s_prod/server-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluser-ip
spec:
  selector:
    name: router
  type: ClusterIP
  ports:
    - port: 6689
      targetPort: 6689
